# OTUS_DZ

./: .gitmodules
DZ1-types/: Makefile  README.md
DZ1-types/src/: rarjpeg_idetifier.c  zip.h
DZ10-shared-memory/: Makefile  README.md
DZ10-shared-memory/src/: crc32.c  crc32.h  main.c
DZ11-threads/: CMakeLists.txt  README.md
DZ11-threads/hash_map/: hash.c  hash.h  hash_map.c  hash_map.h
DZ11-threads/src/: combined_log.c  combined_log.h  file_list.c  file_list.h  file_with_mutex.c  file_with_mutex.h  logs.c  logs.h  main.c  parallel_logs.c  parallel_logs.h
DZ12-network/: CMakeLists.txt  README.md
DZ12-network/src/: main.c  telnet.h
DZ13-async/: CMakeLists.txt  Client.c  Readme.md  main.c
DZ13-async/Server/: Server.c  Server.h  Worker.c  Worker.h
DZ13-async/Utils/: HTTP.c  HTTP.h  Utils.c  Utils.h
DZ14-db-integration/: Makefile  README.md
DZ14-db-integration/src/: main.c
DZ15-async/: CMakeLists.txt  README.md  main.c
DZ16-games/: Readme.md
DZ2-types-contd/: Makefile  README.md
DZ2-types-contd/src/: convect.c  misunderstood_the_task_solution.c
DZ3-search-sort/: Makefile  README.md
DZ3-search-sort/files/: test
DZ3-search-sort/src/: hash_table.c  hash_table.h  hasht.c
DZ4-libraries/: README.md
DZ5-oop/: README.md  launch.sh  meson.build
DZ6-errors/: Makefile  README.md
DZ7-assembler/: Makefile  README.md
DZ8-posix/: README.md
DZ9-ipc/: CMakeLists.txt  CommonData.h  Daemonizer.c  Daemonizer.h  FileInfoMonitoring.c  FileInfoMonitoring.h  InstallDaemon.cmake  MyDaemon.c  Readme.md  Server.c  TestClient.c
project/: README.md
(+63 files in other folders)
